# flipperzero-firmware

./: .gitignore  docker-compose.yml
SES/: .gitignore  firmware.emProject  firmware.emSession  flipper.property-groups.xml  gen-version.sh  versiondef.inc  versiondef.property-groups
SES/firmware/: STM32WB55RGVx_MemoryMap.xml  STM32WBxx_Flash.icf
applications/: applications.c  applications.mk
applications-ext/api-generator/: CMakeLists.txt  elfio_loadsym.cpp  elfio_loadsym.h  flipper_apigen.c  flipper_apigen.cpp  symbol_excl_processor.cpp  symbol_excl_processor.h  symbol_filter.cpp  symbol_filter.h
applications/about/: about.c
applications/cli/: cli.c  cli_commands.c
applications/crypto/: crypto_cli.c
applications/debug_tools/: bad_usb.c  usb_mouse.c  usb_test.c
applications/desktop/: desktop.c
applications/dolphin/: dolphin.c
applications/elf-loader/: compilesort.hpp  elf-addr-resolver.c  elf-addr-resolver.h  elf-loader.c  symcache.c  symcache.cpp  symcache.h  symcache_ce.cpp  symcache_flash.c  symcache_raw.c  tkvdb-wrapper.hpp
applications/flash_manager/: chip_type.h  flash_manager.h  flash_manager_app.cpp  flash_manager_cli.cpp  flash_manager_file_tools.cpp  flash_manager_file_tools.h  flash_manager_launcher.cpp  flash_manager_worker.cpp  flash_manager_worker.h
applications/gpio/: gpio_app.c
applications/gui/: canvas.c
applications/imu/: imu.c  imu.h  lis331dlh_reg.h
applications/irda/: irda-app.cpp  irda_app.cpp
applications/lfrfid/: lfrfid-app.cpp  lfrfid-cli.cpp  lfrfid_cli.cpp
lib/: lib.mk
make/: toolchain.mk
(+116 files in other folders)
